--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello here is our website!</h1>
-    <p>Here Is some cool new content!</p>
+    <h1>Project HC</h1>
+    <p>Project HC is a programming operating found by I (Tristin Hallin) and my business partner (Brendan Curley). We develop websites for any occasion. We are both experienced with Python, and C++. We are always learning new languages to provide te best quality work for our clients.</p>
 </body>
 </html>
