--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Project HC</title>
 </head>
 <body>
     <h1>Project HC</h1>
-    <p>Project HC is a programming operating found by I (Tristin Hallin) and my business partner (Brendan Curley). We develop websites for any occasion. We are both experienced with Python, and C++. We are always learning new languages to provide te best quality work for our clients.</p>
+    <p>Project HC is an operation founded by I (Tristin Hallin) and my business partner (Brendan Curley). We develop websites for any occasion. <br>We are both experienced with Python, and C++. We are always learning new languages to provide te best quality work for our clients.</p>
+    <ul>
+        <li><a href="samples.html">Samples</li>
+        <li><a href="pricing.html">Pricing</li>
+        <li><a href="DrewCarrey.html">Drew Carrey</li>
+        <li><a href="index.html">Home</li>
+    </ul>
+    <div></div>
+    <span></span>
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> This is important for learning more about us.</a><br>
+
 </body>
 </html>
