Updated for images

--- a/DrewCarrey.html
+++ b/DrewCarrey.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>DrewCarrey.html</h1>
-    <img="https://media.npr.org/assets/img/2012/06/29/131308689_custom-32155decfef618840b0603aa328472e28b9398c3-s1100-c50.jpg">
+    <img src="https://media.npr.org/assets/img/2012/06/29/131308689_custom-32155decfef618840b0603aa328472e28b9398c3-s1100-c50.jpg">
+
+    <p><a href="index.html">Click for Home</a></p>
 </body>
 </html>
