--- a/pricing.html
+++ b/pricing.html
@@ -10,5 +10,6 @@
     <h1>Pricing</h1>
     <p>We make websites very well.</p>
     <p>Basic package cost 1 milli</p>
+    <p><a href="index.html">Click for Home</a></body></p>
 </body>
 </html>
