--- a/samples.html
+++ b/samples.html
@@ -11,5 +11,8 @@
     <p>We make websites very well</p>
     <p>Here are other websites: </p>
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> Click for Money</a>
+
+    <p><a href="index.html">Click for Home</a></p>
+
 </body>
 </html>
