--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         </nav>
     </header>    
     <div></div>
+
+    <footer>©Project HC 2023</footer>
+    
     <span></span>
 
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> This is important for learning more about us.</a><br>
