--- a/index.html
+++ b/index.html
@@ -6,31 +6,64 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project HC</title>
-    <link href="main.css" rel="stylesheet" type="text/css" />
+    <link href="main.css" rel="stylesheet"/>
 </head>
 
 <body>
 
-
     <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="pages/pricing.html">Pricing</a></li>
+                <li class="logo"><a href="index.html">Project HC Logo</a></li>
+                <li><a href="pages/aboutus.html">About Us</a></li>
+                <li><a href="pages/DrewCarrey.html">Drew Carrey</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="feature">
+         <figure>
+            <a href="pages/samples.html"><button><img src="400matrix.png" alt="Sample Website 1"></button></a>
+            <figcaption>Sample Website 1: Name</figcaption>
+         </figure>
+         <figure>
+            <img src="codesnip400.png" alt="Sample Website 1">
+            <figcaption>Sample Website 2: Name</figcaption>
+         </figure>
+         <figure>
+            <img src="monitor400.png" alt="Sample Website 1">
+            <figcaption>Sample Website 3: Name</figcaption>
+         </figure>
+    </section>
+
+    <footer>©Project HC 2023</footer>
+
+
+    <!--<header>
         <nav>
             <h1>Project HC</h1>
             <ul>
-                <li><a href="samples.html">Samples</a></li>
-                <li><a href="pricing.html">Pricing</a></li>
-                <li><a href="DrewCarrey.html">Drew Carrey</a></li>
+                <li><button><a href="samples.html">Samples</a></button></li>
+                <li><button><a href="pricing.html">Pricing</a></button></li>
+                <li><button><a href="DrewCarrey.html">Drew Carrey</a></button></li>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
             </ul>
         </nav>
     </header>    
-    <div></div>
 
-    <footer>©Project HC 2023</footer>
-    
+
     <span></span>
-
-    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> This is important for learning more about us.</a><br>
+    <br>
+    <div>
+        <div class="col">Col1</div>
+        <div class="col">Col2</div>
+        <div class="col">Col3</div>
+    </div>
+    <br>
+    <footer>©Project HC 2023</footer>-->
 
 </body>
 </html>
