--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -5,9 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="main.css" rel="stylesheet" type="text/css" />
+    <link href="../main.css" rel="stylesheet"/>
 </head>
 <body>
+
+    <header>
+        <nav>
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="samples.html">Samples</a></li>
+                <li><a href="pricing.html">Pricing</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
+                <li><a href="DrewCarrey.html">Drew Carrey</a></li>
+            </ul>
+        </nav>
+        <h1>About Us</h1>
+    </header>
+    <section>
+         <div>a</div>
+         <div>b</div>
+         <div>c</div>
+    </section>
+    <section>lower</section>
+    <footer>footer</footer>
+
+
     <h1>Project HC</h1>
     <p>Project HC is an operation founded by I (Tristin Hallin) and my business partner (Brendan Curley). We develop websites for any occasion.</p> 
     <p class="secondary">We are both experienced with Python, and C++. We are always learning new languages to provide te best quality work for our clients.</p>
