--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="pages/pricing.html">Pricing</a></li>
+                <li class="mobile"><a href="pages/aboutus.html">About Us</a></li>
+                <li class="mobile"><a href="pages/DrewCarrey.html">Drew Carrey</a></li>
                 <li class="logo"><a href="index.html">Project HC Logo</a></li>
-                <li><a href="pages/aboutus.html">About Us</a></li>
-                <li><a href="pages/DrewCarrey.html">Drew Carrey</a></li>
+                <li class="desktop"><a href="pages/aboutus.html">About Us</a></li>
+                <li class="desktop"><a href="pages/DrewCarrey.html">Drew Carrey</a></li>
             </ul>
         </nav>
     </header>
