--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     </header>
 
     <section class="feature">
-         <figure>
-            <a href="pages/samples.html"><button><img src="400matrix.png" alt="Sample Website 1"></button></a>
+         <figure class="sam1">
+            <a href="pages/samples.html"><img src="400matrix.png" alt="Sample Website 1"></a>
             <figcaption>Sample Website 1: Name</figcaption>
          </figure>
          <figure>
