OverHaul Hallin Dev

--- a/index.html
+++ b/index.html
@@ -15,15 +15,17 @@
 <body>
 
     <header>
+        <div>
+            <!--logo-->
+            <h1>Hallin Development</h1>
+
+        </div>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="pages/pricing.html">Pricing</a></li>
-                <li class="mobile"><a href="pages/aboutus.html">About Us</a></li>
-                <li class="mobile"><a href="pages/DrewCarrey.html">Drew Carrey</a></li>
-                <li class="logo"><a href="index.html">Project HC Logo</a></li>
-                <li class="desktop"><a href="pages/aboutus.html">About Us</a></li>
-                <li class="desktop"><a href="pages/DrewCarrey.html">Drew Carrey</a></li>
+                <li><a href="pages/samples.html">Samples</a></li>
+                <li><a href="pages/aboutus.html">About</a></li>
             </ul>
         </nav>
     </header>
