--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
     <link href="main.css" rel="stylesheet"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
     <header>
         <div>
-            <!--logo-->
-            <h1>Hallin Development</h1>
+            <div class="name-head">
+                <div class="logo-head"><img src="images/headlogo.png"></div>
+                <div class="head-name">Hallin <br> Development</div>
+            </div>
 
         </div>
         <nav>
