--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -6,20 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="../main.css" rel="stylesheet"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
     <header>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="samples.html">Samples</a></li>
-                <li><a href="pricing.html">Pricing</a></li>
-                <li><a href="aboutus.html">About Us</a></li>
-                <li><a href="DrewCarrey.html">Drew Carrey</a></li>
-            </ul>
-        </nav>
-        <h1>About Us</h1>
+        <div class="web-head">
+            <img class="logo" src="../images/HalDevWeb.png">            
+            <nav class="main-desk-nav">
+                <ul class="main-nav">
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="pricing.html">Pricing</a></li>
+                    <li><a href="samples.html">Samples</a></li>
+                    <li><a href="aboutus.html">About</a></li>
+                </ul>
+            </nav>    
+        </div>
     </header>
     <section>
          <div>a</div>
@@ -30,9 +35,12 @@
     <footer>footer</footer>
 
 
-    <h1>Project HC</h1>
-    <p>Project HC is an operation founded by I (Tristin Hallin) and my business partner (Brendan Curley). We develop websites for any occasion.</p> 
-    <p class="secondary">We are both experienced with Python, and C++. We are always learning new languages to provide te best quality work for our clients.</p>
-    <p><a href="index.html">Click for Home</a></body></p>
+    <h1>Hallin Development</h1>
+    <p>
+        Hallin Development is a small operation I founded with the idea to be a contracted full-stack developer. <br>
+        Hallin Development as it stands is not an official company but rather branding I am using for a landing page and professional endeavors. <br>
+        I am experienced in python, C++, and am also mastering Html and CSS. I am always learning new languages, and structures to provide the best quality of content for my clients.
+    </p>
+    <p><a href="../index.html">Click for Home</a></body></p>
 </body>
 </html>
