--- a/index.html
+++ b/index.html
@@ -15,21 +15,17 @@
 <body>
 
     <header>
-        <div>
-            <div class="name-head">
-                <div class="logo-head"><img src="images/headlogo.png"></div>
-                <div class="head-name">Hallin <br> Development</div>
-            </div>
-
+        <div class="web-head">
+            <img class="logo" src="images/HalDevWeb.png">            
+            <nav class="main-desk-nav">
+                <ul class="main-nav">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="pages/pricing.html">Pricing</a></li>
+                    <li><a href="pages/samples.html">Samples</a></li>
+                    <li><a href="pages/aboutus.html">About</a></li>
+                </ul>
+            </nav>    
         </div>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="pages/pricing.html">Pricing</a></li>
-                <li><a href="pages/samples.html">Samples</a></li>
-                <li><a href="pages/aboutus.html">About</a></li>
-            </ul>
-        </nav>
     </header>
 
     <section class="feature">
