updated header to all

--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -10,16 +10,17 @@
 <body>
 
     <header>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="samples.html">Samples</a></li>
-                <li><a href="pricing.html">Pricing</a></li>
-                <li><a href="aboutus.html">About Us</a></li>
-                <li><a href="DrewCarrey.html">Drew Carrey</a></li>
-            </ul>
-        </nav>
-        <h1>Pricing</h1>
+        <div class="web-head">
+            <img class="logo" src="../images/HalDevWeb.png">            
+            <nav class="main-desk-nav">
+                <ul class="main-nav">
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="pricing.html">Pricing</a></li>
+                    <li><a href="samples.html">Samples</a></li>
+                    <li><a href="aboutus.html">About</a></li>
+                </ul>
+            </nav>    
+        </div>
     </header>
     <section>
          <div>a</div>
