--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
          </figure>
     </section>
 
-    <footer>©Project HC 2023</footer>
+    <footer>©Hallin Development 2023</footer>
 
 
     <!--<header>
